--- a/FM/js/uploadify/uploadify.css
+++ b/FM/js/uploadify/uploadify.css
@@ -5,54 +5,113 @@ Released under the MIT License <http://www.opensource.org/licenses/mit-license.p
 */
 
 .uploadify {
-	position: relative;
-	margin-bottom: 1em;
-     margin-top: 13px;
-     float: left;
+    position: relative;
+    margin-bottom: 1em;
+    margin-top: 13px;
+    float: left;
 }
-.uploadify-button {
-	background: url("/images/upload.png");
-}
-.uploadify:hover .uploadify-button {
 
+.uploadify-button {
+    background: url("/images/upload.png");
 }
+
+.uploadify:hover .uploadify-button {
+}
+
 .uploadify-button.disabled {
-	background-color: #D0D0D0;
-	color: #808080;
+    background-color: #D0D0D0;
+    color: #808080;
 }
+
 .uploadify-queue {
-	margin-bottom: 1em;
+    margin-bottom: 1em;
 }
+
 .uploadify-queue-item {
-	background-color: #F5F5F5;
-	-webkit-border-radius: 3px;
-	-moz-border-radius: 3px;
-	border-radius: 3px;
-	font: 11px Verdana, Geneva, sans-serif;
-	margin-top: 5px;
-	max-width: 350px;
-	padding: 10px;
+    background-color: #F5F5F5;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    border-radius: 3px;
+    font: 11px Verdana, Geneva, sans-serif;
+    margin-top: 5px;
+    max-width: 350px;
+    padding: 10px;
 }
+
 .uploadify-error {
-	background-color: #FDE5DD !important;
+    background-color: #FDE5DD !important;
 }
+
 .uploadify-queue-item .cancel a {
-	background: url('../img/uploadify-cancel.png') 0 0 no-repeat;
-	float: right;
-	height:	16px;
-	text-indent: -9999px;
-	width: 16px;
+    background: url('../img/uploadify-cancel.png') 0 0 no-repeat;
+    float: right;
+    height: 16px;
+    text-indent: -9999px;
+    width: 16px;
 }
+
 .uploadify-queue-item.completed {
-	background-color: #E5E5E5;
+    background-color: #E5E5E5;
 }
+
 .uploadify-progress {
-	background-color: #E5E5E5;
-	margin-top: 10px;
-	width: 100%;
+    background-color: #E5E5E5;
+    margin-top: 10px;
+    width: 100%;
 }
+
 .uploadify-progress-bar {
-	background-color: #0099FF;
-	height: 3px;
-	width: 1px;
+    background-color: #0099FF;
+    height: 3px;
+    width: 1px;
+}
+
+.fm_main_queue {
+    bottom: 0;
+    display: none;
+    position: fixed;
+    right: 0;
+    z-index: 1000;
+}
+
+.fm_main_queue_head {
+    height: 39px;
+    line-height: 39px;
+    width: 369px;
+    background: url("/images/sprite_n1_ccdf642.gif") repeat-x scroll 0 0;
+    font-size: 14px;
+    color: #fff;
+    padding-left: 10px;
+}
+
+    .fm_main_queue_head a {
+        display: inline-block;
+        float: right;
+        height: 11px;
+        margin-top: 13px;
+        padding-left: 5px;
+        padding-right: 5px;
+        text-decoration: none;
+        width: 11px;
+        cursor: pointer;
+    }
+
+a.fm_main_queue_head_min {
+    background: url("/images/amin.png") no-repeat;
+}
+
+a.fm_main_queue_head_max {
+    background: url("/images/amax.png") no-repeat;
+    display: none;
+}
+
+a.fm_main_queue_head_close {
+    background: url("/images/aclose.png") no-repeat;
+}
+
+#uploadfileQueue {
+    border: 1px solid #3683db;
+    padding: 3px;
+    width: 371px;
+    display: none;
 }
